# Small-Infer

./: CMakeLists.txt  README.md
include/: make_vector.hpp  tensor.hpp  types.h
include/utils/: logger.h  singleton.h
src/utils/: logger.cpp
test/: CMakeLists.txt
test/data/: CMakeLists.txt  test_tensor.cc
test/utils/: CMakeLists.txt  test_logger.cc  test_spdlog.cc
